tests/a/tests/integrity/fail/closure/closure.0.stderr
error: expected {root}{root}, found {*}{*}
 --> tests/integrity/fail/closure/closure.0.rs:8:13
  |
8 |     let y = f(5);
  |             ^^^^
